2 - Deploy App/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eksdemo-frontend
  labels:
    app: eksdemo-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eksdemo-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: eksdemo-frontend
    spec:
      containers:
      - image: brentley/ecsdemo-frontend:latest
        imagePullPolicy: Always
        name: eksdemo-frontend
        ports:
        - containerPort: 3000
          protocol: TCP
