2 - Deploy App/frontend/service_nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: eksdemo-frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb    # To create Network Load Balancer
spec:
  selector:
    app: eksdemo-frontend
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3000
