2 - Deploy App/frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eksdemo-frontend
spec:
  backend:
    serviceName: eksdemo-frontend
    servicePort: 80
